Fix Sonar Issues
Fixes gh-4300